# hackpad

./: .gitignore  .gitmodules  APPROVED_PARTS.md  CyberPad Case Model.step  CyberPad KMK Firmware.py  Hackpad_kicadfile.kicad_pcb  KmkFirmware.py  LICENSE  PULL_REQUEST_TEMPLATE.md  README.MD  README.md  SathyPad_Bottom.stl  SathyPad_Top.stl  Zohair Keyboard v2.f3d  _autosave-Hackpad_kicadfile.kicad_sch  casebottom (1).stl  commit.bat  fp-info-cache  hackpad case assembled.stl  hello.kicad_pcb  info.json  keymap.c  macrokitten.f3d  plate (1).dxf  readme.md  trains_macropad.kicad_prl  zohair plate v1.f3d
.github/: PULL_REQUEST_TEMPLATE.md
BearTyreeSubmission/: README.md
CAD/: HACKPAD-3DPRINT.step  SathyPad_Plate.stl  Wills Hackpad v1 v3.step
Keyboard/: Keyboard.csv  Keyboard.kicad_sch  _autosave-Keyboard.kicad_prl  fp-info-cache  fp-lib-table  sym-lib-table
MITTAL1/: BOM.md
Macro Pad V.1/: README.md
PCB/: HackPad_v4.kicad_sch  Hackpad.kicad_pcb  Hackpad.kicad_sch  Lightless.kicad_pcb  Lightless.kicad_pro  New_Library.kicad_sym  README.md  fp-info-cache  fp-lib-table  fullkey.kicad_pro  lightless.kicad_sch
ReaperBoard/: README.md
RyansHackPad/: dob.md
ShortcutPad/: README.md
WillPad/: README.md
cad/: lightless.step  macropad_casing_final v14.f3z
case/: nekopad.dxf
divpreetpad/: README.md
dmceganpad/: dmcegan Hackpad BOM.txt
extras/: knurled_knob.step
firmware/: boardsource_3x4_duck_pad.hex  boardsource_3x4_layout_mine.json  config.h  info.json  main.py  readme.md  rules.mk
foxpad-pcb/: hackpad3d.kicad_pro
hackpad pcb/: retry-B_Mask.gbr  retry-B_Paste.gbr  retry-F_Paste.gbr  retry.kicad_pcb  retry.kicad_sch
hackpad_Afrem/: README.md
hackpads/: .gitignore  BOM.md  HackPad.kicad_pro  Hackclub-B_Paste.gbr  Hackclub-Edge_Cuts.gbr  Hackclub-F_Mask.gbr  README.md  ariane_clarke.stl  ariane_clarke_pcb.step  config.h  fp-lib-table  hackyippee_default.elf  hackyippee_default.tmp  keyboard.json  keymap.c  miaumacropad  mpv1.kicad_pcb  mpv1.kicad_pro  mpv1.kicad_sch  (+3 more)
hackpads/GamePad/firmware/rmk/: .gitignore  Cargo.toml  build.rs
hackpads/GamePad/firmware/rmk/.cargo/: config.toml
hackpads/GamePad/firmware/rmk/src/: keymap.rs  main.rs
hackpads/MiniGamePad/firmware/custom/: .gitignore  Cargo.toml  build.rs  rust-toolchain.toml
hackpads/MiniGamePad/firmware/custom/.cargo/: config.toml
hackpads/MiniGamePad/firmware/custom/lib/: Cargo.toml
hackpads/MiniGamePad/firmware/custom/lib/src/: lib.rs
hackpads/pianissimo/firmware/adafruit-circuitpython-bundle-9.x-mpy-20250213/requirements/adafruit_24lc32/: pyproject.toml
hackpads/pianissimo/firmware/adafruit-circuitpython-bundle-9.x-mpy-20250213/requirements/adafruit_ad569x/: pyproject.toml
hackpads/pianissimo/firmware/adafruit-circuitpython-bundle-9.x-mpy-20250213/requirements/adafruit_adg72x/: pyproject.toml  requirements.txt
hackpads/pianissimo/firmware/adafruit-circuitpython-bundle-9.x-mpy-20250213/requirements/adafruit_ads7830/: pyproject.toml
hackpads/pianissimo/firmware/adafruit-circuitpython-bundle-9.x-mpy-20250213/requirements/adafruit_adt7410/: pyproject.toml
hackpads/pianissimo/firmware/adafruit-circuitpython-bundle-9.x-mpy-20250213/requirements/adafruit_ags02ma/: pyproject.toml
hackpads/pianissimo/firmware/adafruit-circuitpython-bundle-9.x-mpy-20250213/requirements/adafruit_ahtx0/: pyproject.toml
hackpads/pianissimo/firmware/adafruit-circuitpython-bundle-9.x-mpy-20250213/requirements/adafruit_am2320/: pyproject.toml
hackpads/pianissimo/firmware/adafruit-circuitpython-bundle-9.x-mpy-20250213/requirements/adafruit_apds9960/: pyproject.toml
hackpads/pianissimo/firmware/adafruit-circuitpython-bundle-9.x-mpy-20250213/requirements/adafruit_atecc/: pyproject.toml  requirements.txt
hackpads/pianissimo/firmware/adafruit-circuitpython-bundle-9.x-mpy-20250213/requirements/adafruit_aw9523/: pyproject.toml
hackpads/pianissimo/firmware/adafruit-circuitpython-bundle-9.x-mpy-20250213/requirements/adafruit_aws_iot/: pyproject.toml  requirements.txt
hackpads/pianissimo/firmware/adafruit-circuitpython-bundle-9.x-mpy-20250213/requirements/adafruit_azureiot/: pyproject.toml  requirements.txt
hackpads/pianissimo/firmware/adafruit-circuitpython-bundle-9.x-mpy-20250213/requirements/adafruit_bd3491fs/: pyproject.toml
hackpads/pianissimo/firmware/adafruit-circuitpython-bundle-9.x-mpy-20250213/requirements/adafruit_bh1750/: pyproject.toml
hackpads/pianissimo/firmware/adafruit-circuitpython-bundle-9.x-mpy-20250213/requirements/adafruit_binascii/: pyproject.toml  requirements.txt
hackpads/pianissimo/firmware/adafruit-circuitpython-bundle-9.x-mpy-20250213/requirements/adafruit_bitbangio/: pyproject.toml  requirements.txt
hackpads/pianissimo/firmware/adafruit-circuitpython-bundle-9.x-mpy-20250213/requirements/adafruit_bitmap_font/: pyproject.toml
hackpads/pianissimo/firmware/adafruit-circuitpython-bundle-9.x-mpy-20250213/requirements/adafruit_ble_apple_notification_center/: pyproject.toml
hackpads/pianissimo/firmware/adafruit-circuitpython-bundle-9.x-mpy-20250213/requirements/adafruit_ble_beacon/: pyproject.toml  requirements.txt
hackpads/pianissimo/firmware/adafruit-circuitpython-bundle-9.x-mpy-20250213/requirements/adafruit_ble_cycling_speed_and_cadence/: pyproject.toml
hackpads/pianissimo/firmware/adafruit-circuitpython-bundle-9.x-mpy-20250213/requirements/adafruit_ble_eddystone/: pyproject.toml
hackpads/pianissimo/firmware/adafruit-circuitpython-bundle-9.x-mpy-20250213/requirements/adafruit_ble_file_transfer/: pyproject.toml  requirements.txt
hackpads/pianissimo/firmware/adafruit-circuitpython-bundle-9.x-mpy-20250213/requirements/adafruit_ble_heart_rate/: pyproject.toml
hackpads/pianissimo/firmware/adafruit-circuitpython-bundle-9.x-mpy-20250213/requirements/adafruit_ble_lywsd03mmc/: pyproject.toml
hackpads/pianissimo/firmware/adafruit-circuitpython-bundle-9.x-mpy-20250213/requirements/adafruit_ble_magic_light/: pyproject.toml  requirements.txt
hackpads/pianissimo/firmware/adafruit-circuitpython-bundle-9.x-mpy-20250213/requirements/adafruit_ble_radio/: pyproject.toml
(+12295 files in other folders)
