[package]
resolver = "2"
name = "rmk"
version = "0.0.1"
description = "Keyboard firmware written in Rust"
homepage = ""
repository = ""
readme = ""
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
rmk = { version = "0.3.2", features = [
    "async_matrix",
    ] }
cortex-m-rt = "0.7.3"
embassy-rp = { version = "0.2", features = [
    "defmt",
    "time-driver",
    "critical-section-impl",
] }
embassy-time = { version = "0.3", features = ["defmt"] }
portable-atomic = { version = "1.5", features = ["critical-section"] }
embassy-executor = { version = "0.6", features = [
    "defmt",
    "arch-cortex-m",
    "executor-thread",
    "integrated-timers",
] }
static_cell = { version = "2" }
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[build-dependencies]
xz2 = "0.1.7"
json = "0.12"
const-gen = "1.6"

[profile.dev]
codegen-units = 1      # better optimizations
debug = true
opt-level = 1
overflow-checks = true
lto = false
panic = 'unwind'

[profile.release]
codegen-units = 1       # better optimizations
debug = true            # no overhead for bare-metal
opt-level = "z"         # optimize for binary size
overflow-checks = false
lto = "fat"
