[workspace]
resolver = "2"
members = [
    "bin",
    "lib"
]

[workspace.package]
version = "0.1.0"
authors = ["Sycrosity <72102935+Sycrosity@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]

embassy-rp = { version = "0.2", features = [
    "defmt",
    "time-driver",
    "critical-section-impl",
] }
cortex-m-rt = "0.7.3"
pio = "0.2.1"

portable-atomic = { version = "1.5", features = ["critical-section"] }

embassy-time = { version = "0.3", features = ["defmt"] }
embassy-executor = { version = "0.6", features = [
    "defmt",
    "arch-cortex-m",
    "executor-thread",
    "integrated-timers",
] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }
embassy-usb = "0.3"

embedded-hal = "1.0.0"
embedded-hal-async = "^1.0"

ssd1306 = { version = "0.9", path = "/Users/louis/dev/cansat/ssd1306" }

static_cell = { version = "2" }
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

cfg-if = "1"
bon = { version = "2.3", default-features = false }

[profile.dev]
codegen-units = 1      # better optimizations
debug = true
opt-level = 1
overflow-checks = true
lto = false
panic = 'unwind'

[profile.release]
codegen-units = 1       # better optimizations
debug = true            # no overhead for bare-metal
opt-level = "z"         # optimize for binary size
overflow-checks = false
lto = "fat"

[patch.crates-io]
ssd1306 = { version = "0.9.0", git = "https://github.com/embedevices-rs/ssd1306", branch = "async" }